--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "marked": "^9.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
